# theta-invariant

./: .gitignore  Lagrange Code + Rational Structs (should test for accuracy, but jupyter didn't flag anything)  README.md
src/: CMakeLists.txt  Lagrange Code + Rational Structs (should test for accuracy, but jupyter didn't flag anything).c  Quotient of bivariate polynomials (not tested, but should work)  Quotient of bivariate polynomials (not tested, but should work).c  add_bivariate_polynomials.c  add_double_polynomials.c  add_polynomials.c  adjust_degree.c  block_polynomial_split_matrix.c  copy_polynomial.c  delete_linked_list.c  delete_polynomial_matrix.c  delete_polynomial_pointer_matrix.c  delete_polynomial_split_matrix.c  divide_polynomials.c  float_adjugate.c  initialize_bivariate_polynomial.c  initialize_double_polynomial.c  initialize_polynomial.c  insert_linked_list.c  int_adjugate.c  lagrange_interpolate.c  lagrange_polynomial_adjugate.c  lagrange_product.c  main.c  make_double_polynomial.c  make_float_matrix.c  make_int_matrix.c  make_knot.c  make_polynomial.c  make_polynomial_matrix.c  make_polynomial_pointer_matrix.c  make_polynomial_split_matrix.c  minimal_nullspace_basis.c  multiply_bivariate_polynomials.c  multiply_double_polynomials.c  multiply_polynomial_matrices.c  multiply_polynomial_pointer_matrices.c  multiply_polynomials.c  polynomial_matrix_adjugate.c  (+19 more)
src/tests/: float_adjugate_test.c  int_adjugate_test.c  row_echelon_form_test.c
